Some descriptive commit message

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="header__menu">
             <nav class="header__menu__top">
                 <a href="#" class="header__menu__top__notification">
-                    <img src="img\notification-icon.svg">
+                    <img src="img\notification-icon.svg" alt="bell">
                     <span class="label__notofication">2</span>
                 </a>
                 <a href="#" class="header__menu__top__search">
@@ -41,23 +41,23 @@
                 </div>
                 <div class="sidebar__menu">
                     <button class="sidebar__menu__item active__tab">
-                        <img src="img/dashboard-icon.svg">
+                        <img src="img/dashboard-icon.svg" alt="dashboard">
                         <span>Dashboard</span>
                     </button>
                     <button class="sidebar__menu__item">
-                        <img src="img\social-feed-icon.svg">
+                        <img src="img\social-feed-icon.svg" alt="feed">
                         <span>Social Feed</span>
                     </button>
                     <button class="sidebar__menu__item">
-                        <img src="img\invite-friends-icon.svg">
+                        <img src="img\invite-friends-icon.svg" alt="invite">
                         <span>Invite Friends</span>
                     </button>
                     <button class="sidebar__menu__item">
-                        <img src="img\settings-icon.svg">
+                        <img src="img\settings-icon.svg" alt="settings">
                         <span>Settings</span>
                     </button>
                     <button class="sidebar__menu__item">
-                        <img src="img\log-out-icon.svg">
+                        <img src="img\log-out-icon.svg" alt="log_out">
                         <span>Log out</span>
                     </button>
                 </div>
